syntax = "proto3";

package controller.api.resources.authmethods.v1;

option go_package = "github.com/hashicorp/boundary/internal/gen/controller/api/resources/authmethods;authmethods";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "controller/api/resources/scopes/v1/scope.proto";
import "controller/custom_options/v1/options.proto";

// AuthMethod contains all fields related to an Auth Method resource
message AuthMethod {
	// Output only. The ID of the Auth Method.
	string id = 10;

	// The ID of the Scope of which this Auth Method is a part.
	string scope_id = 20 [json_name="scope_id"];

	// Output only. Scope information for this Auth method.
	resources.scopes.v1.ScopeInfo scope = 30;

	// Optional name for identification purposes.
	google.protobuf.StringValue name = 40 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = {this:"name" that: "Name"}];

	// Optional user-set description for identification purposes.
	google.protobuf.StringValue description = 50 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = {this:"description" that: "Description"}];

	// Output only. The time this resource was created.
	google.protobuf.Timestamp created_time = 60 [json_name="created_time"];

	// Output only. The time this resource was last updated.
	google.protobuf.Timestamp updated_time = 70 [json_name="updated_time"];

	// Version is used in mutation requests, after the initial creation, to ensure this resource has not changed.
	// The mutation will fail if the version does not match the latest known good version.
	uint32 version = 80;

	// The Auth Method type.
	string type = 90;

	// The attributes that are applicable for the specific Auth Method type.
	google.protobuf.Struct attributes = 100 [(custom_options.v1.generate_sdk_option) = true];

	// Output only. The available actions on this resource for this user.
	repeated string authorized_actions = 300 [json_name="authorized_actions"];

	// Output only. The authorized actions for the scope's collections.
	map<string, google.protobuf.ListValue> authorized_collection_actions = 310 [json_name="authorized_collection_actions"];
}

// The attributes of a password typed auth method.
message PasswordAuthMethodAttributes {
	// The minimum length allowed for user names for Accounts in this Auth Method.
	uint32 min_login_name_length = 10 [json_name="min_login_name_length", (custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = {this:"attributes.min_login_name_length" that: "MinLoginNameLength"}];

	// The minimum length allowed for passwords for Accounts in this Auth Method.
	uint32 min_password_length = 20 [json_name="min_password_length", (custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = {this:"attributes.min_password_length" that: "MinPasswordLength"}];
}

// The attributes of an OIDC typed auth method.
message OidcAuthMethodAttributes {
	// Output only. Will be "inactive", "active-private", or "active-public"
	string state = 10 [json_name="state"];

	// A URL where the OIDC provider's configuration can be retrieved. Boundary
	// expects only the schema, host, and port and will strip off
	// "/.well-known/openid-configuration" if present
	google.protobuf.StringValue discovery_url = 20 [json_name="discovery_url", (custom_options.v1.mask_mapping) = {this:"attributes.discovery_url" that: "DiscoveryUrl"}];

	// An OAuth 2.0 Client Identifier valid at the Authorization Server.
	google.protobuf.StringValue client_id = 30 [json_name="client_id", (custom_options.v1.mask_mapping) = {this:"attributes.client_id" that: "ClientId"}];

	// Input only. The client's secret.
	google.protobuf.StringValue client_secret = 40 [json_name="client_secret", (custom_options.v1.mask_mapping) = {this:"attributes.client_secret" that: "ClientSecret"}];

	// Output only. The hashed value of the clients secret to indicate whether the client secret has changed.
	string  client_secret_hmac = 50 [json_name="client_secret_hmac"];

	// The elapsed time in seconds before the end user should be forced to re-authenticate. 0 is invalid, -1 indicates
	// an immediate need to reauthenticate.
	google.protobuf.Int32Value max_age = 60 [json_name="max_age", (custom_options.v1.mask_mapping) = {this:"attributes.max_age" that: "MaxAge"}];

	// The signing algorithms allowed for an oidc auth method
	repeated string signing_algorithms = 70 [json_name="signing_algorithms", (custom_options.v1.mask_mapping) = {this:"attributes.signing_algorithms" that: "SigningAlgs"}];

	// The url prefixes used by the OIDC provider for call back url, the token
	// retrieval url, and the final redirect url used in the authentication flow
	// for this auth method.
	google.protobuf.StringValue api_url_prefix = 80 [json_name="api_url_prefix", (custom_options.v1.mask_mapping) = {this:"attributes.api_url_prefix" that: "CallbackUrls"}];

	// Output only. The callback url used by the OIDC provider in the authentication flow. This will have
	// boundary's callback api path appended too them.
	string callback_url = 90 [json_name="callback_url"];

	// certificates are optional PEM encoded x509 certificates that can be
	// used as trust anchors when connecting to an OIDC provider.
	repeated string certificates = 100 [json_name="certificates", (custom_options.v1.mask_mapping) = {this:"attributes.certificates" that: "Certificates"}];

	// The audience claims for this oidc typed auth method.
	repeated string allowed_audiences = 110 [json_name="allowed_audiences", (custom_options.v1.mask_mapping) = {this:"attributes.allowed_audiences" that: "AudClaims"}];

	// Input only. This is only valid in an update request and should not be used
	// unless the oidc provider's config is incorrectly set and is stopping the
	// activation of this auth method.
	bool override_oidc_discovery_url_config = 120 [json_name="override_oidc_discovery_url_config"];
}
